# hri

./: README.md  Seminar.ipynb
fourth_week/vaje_ws/: 2025-03-11-12-55-32.bag.active  DMP.ipynb  Prvi koraki.ipynb  Tretja vaja.ipynb  Untitled.ipynb
fourth_week/vaje_ws/Vaje/: Cetrta vaja.ipynb  dmp.py
second_week/: Druga vaja.ipynb  Prva vaja.ipynb
vaje_ws/: CMP_test.ipynb  DMP.ipynb  Dockerfile  README.md  Untitled.ipynb
vaje_ws/Vaje/: 2025-03-11-11-19-36.bag.active  2025-03-11-11-20-23.bag.active  Cetrta vaja.ipynb  Cetrta vaja.ipynb.invalid  Druga vaja.ipynb  Prva vaja.ipynb  Seminar.ipynb  Seminar.ipynb.invalid  above.csv  cmp.data.npz  qt_above.csv  qt_above2.csv  t_dec.csv  t_dec2.csv  t_dec2nd.csv  trj_dec.csv  trj_dec2.csv  trj_dec2nd.csv  trq_recorded.csv  trq_recorded2.csv  trq_recorded2nd.csv  trq_t_tp.csv  trq_t_tp2.csv  trq_t_tp_weights.csv  trq_t_tp_weights2.csv  trq_t_tp_weights2nd.csv  trq_tp.csv  trq_tp2.csv  trq_tp_weights.csv  trq_tp_weights2.csv  trq_tp_weights2nd.csv  xt_above.csv  xt_above2.csv
vaje_ws/rbs-docker/: Dockerfile  README.md  docker-compose.yaml  ros_entrypoint.sh
vaje_ws/rbs-docker/configs/: franka-hand-endeffector-config.json  franka-hand-realsense-endeffector-config.json
vaje_ws/rbs-docker/mods/franka_gripper/: CMakeLists.txt
